# tinylog

./: Cargo.toml  README.md  config.toml
src/: config.rs  error.rs  lib.rs
