[package]
name = "tinylog"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.44"
chrono = { version = "0.4.19", features = ["serde"] }
dirs = "4.0.0"
figment = { version = "0.10.6", features = ["toml", "env"] }
log = { version = "0.4.14", features = ["serde"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
termcolor = "1.1.2"
thiserror = "1.0.29"
# tinyroute = { git = "https://github.com/togglebyte/tinyroute" }
tinyroute = { path = "../tinyroute" }
tokio = "1.17.0"
